Add execution instructions to README
Added instructions for executing the project.