@@ -1,1 +1,4 @@
 # ProjetoSistemaDeInformacoesClimaticasEmTempoReal
+# to execute the project use 
+#first //javac --module-path "%PATH_TO_FX%" --add-modules org.json,javafx.controls,javafx.media,javafx.web ProjetoSistemaDeInformacoesClimaticasEmTempoReal.java
+#second //java --module-path "%PATH_TO_FX%" --add-modules org.json,javafx.controls,javafx.media,javafx.web ProjetoSistemaDeInformacoesClimaticasEmTempoReal.java
